[package]
description = "The kimchi proof system"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
homepage = "https://o1-labs.github.io/proof-systems/"
license = "Apache-2.0"
name = "kimchi"
readme = "README.md"
repository = "https://github.com/o1-labs/proof-systems"
version = "0.1.0"

[lib]
bench = false       # needed for criterion (https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options)
path = "src/lib.rs"

[dependencies]
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
blake2.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
once_cell.workspace = true
rand = { workspace = true, features = ["std_rng"] }
rand_core.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

ocaml = { workspace = true, optional = true }
ocaml-gen = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }

internal-tracing.workspace = true

# Internal dependencies
groupmap.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
o1-utils.workspace = true
poly-commitment.workspace = true
turshi.workspace = true


[dev-dependencies]
num-bigint.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
secp256k1.workspace = true
serde_json.workspace = true

# benchmarks
criterion.workspace = true
iai.workspace = true

[[bench]]
harness = false
name = "proof_criterion"

[[bench]]
harness = false
name = "proof_criterion_mina"

[[bench]]
harness = false
name = "proof_iai"

[[bench]]
harness = false
name = "amortization"

[features]
bn254 = ["ark-bn254"]
check_feature_flags = []
default = []
internal_tracing = ["internal-tracing/enabled"]
ocaml_types = [
  "ocaml",
  "ocaml-gen",
  "poly-commitment/ocaml_types",
  "mina-poseidon/ocaml_types",
  "internal-tracing/ocaml_types",
]
wasm_types = ["wasm-bindgen"]
