[package]
name = "kimchi-msm"
description = "Large MSM circuit"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
groupmap.workspace = true
itertools.workspace = true
kimchi.workspace = true
log.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
o1-utils.workspace = true
poly-commitment.workspace = true
rand.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
