[package]
description = "Symbolic interpreter of multivariate polyomials"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
edition = "2021"
homepage = "https://o1-labs.github.io/proof-systems/"
license = "Apache-2.0"
name = "mvpoly"
readme = "README.md"
repository = "https://github.com/o1-labs/proof-systems"
version = "0.1.0"

[[bin]]
name = "bench-cross-terms"
path = "src/bin/bench_cross_terms.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff.workspace = true
kimchi.workspace = true
log.workspace = true
mina-curves.workspace = true
num-integer.workspace = true
o1-utils.workspace = true
rand.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
mina-curves.workspace = true
rand.workspace = true

[[bench]]
harness = false
name = "prime"

[[bench]]
harness = false
name = "monomials"
