[package]
name = "o1js-utils"
version = "0.1.0"
authors = ["opensource@o1labs.org"]
description = "utils module for o1js"
repository = "https://github.com/MinaProtocol/mina"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "o1js"
crate-type = ["lib"]

[dependencies]
libc = "0.2.62"
once_cell = "1.10.0"

# arkworks
ark-ff.workspace = true
ark-poly.workspace = true

# proof-systems
mina-curves = { path = "../curves" }
mina-poseidon = { path = "../poseidon" }

rmp-serde.workspace = true
serde.workspace = true
kimchi.workspace = true
groupmap.workspace = true
poly-commitment.workspace = true
serde_json.workspace = true
base64.workspace = true
