[package]
name = "o1js"
version = "0.1.0"
authors = ["opensource@o1labs.org"]
description = "o1js module for plonk proof systems"
repository = "https://github.com/MinaProtocol/mina"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "o1js"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.62"
neon = { version = "1.0.0" }
once_cell = "1.10.0"

# arkworks
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
arkworks.workspace = true

# proof-systems
mina-curves = { path = "../curves" }
mina-poseidon = { path = "../poseidon" }
o1-utils = { path = "../utils" }

getrandom.workspace = true
num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
rayon.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_with.workspace = true
wasm-bindgen.workspace = true
wasm-types.workspace = true
kimchi.workspace = true
groupmap.workspace = true
poly-commitment.workspace = true
kimchi-stubs.workspace = true
serde_json.workspace = true
base64.workspace = true
