[package]
name = "o1vm"
version = "0.1.0"
description = "o1VM"
repository = "https://github.com/o1-labs/proof-systems"
homepage = "https://o1-labs.github.io/proof-systems/"
documentation = "https://o1-labs.github.io/proof-systems/rustdoc/"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pickles_o1vm"
path = "src/pickles/main.rs"

[features]
open_mips = []

[dependencies]
# FIXME: Only activate this when legacy_o1vm is built
ark-bn254.workspace = true
# FIXME: Only activate this when legacy_o1vm is built
folding.workspace = true
# FIXME: Only activate this when legacy_o1vm is built
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
command-fds.workspace = true
elf.workspace = true
env_logger.workspace = true
groupmap.workspace = true
hex.workspace = true
itertools.workspace = true
kimchi = { workspace = true, features = ["bn254"] }
kimchi-msm.workspace = true
libc.workspace = true
libflate.workspace = true
log.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
o1-utils.workspace = true
os_pipe.workspace = true
poly-commitment.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha3.workspace = true
stacker = "0.1"
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
