[package]
name = "o1vm"
description = "o1VM"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pickles_o1vm"
path = "src/pickles/main.rs"

[features]
open_mips = []

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
command-fds.workspace = true
elf.workspace = true
env_logger.workspace = true
groupmap.workspace = true
hex.workspace = true
itertools.workspace = true
kimchi = { workspace = true, features = ["bn254"] }
kimchi-msm.workspace = true
libc.workspace = true
libflate.workspace = true
log.workspace = true
mina-curves.workspace = true
mina-poseidon.workspace = true
o1-utils.workspace = true
os_pipe.workspace = true
poly-commitment.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha3.workspace = true
stacker = "0.1"
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
